--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "jquery": "^3.3.1",
-    "bootstrap": "^4.0.0"
+    "bootstrap": "^4.0.0",
+    "moment": "^2.20.1"
   }
 }
